--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-12 16:13+0000\n"
+"POT-Creation-Date: 2024-03-13 09:41+0000\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -19,44 +19,50 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.12.0\n"
 
-#: grc/business_logic/constants.py:4
+#: grc/business_logic/constants.py:3
 msgid "Yes"
 msgstr ""
 
-#: grc/business_logic/constants.py:5
+#: grc/business_logic/constants.py:4
 msgid "No"
 msgstr ""
 
-#: grc/business_logic/constants.py:6
+#: grc/business_logic/constants.py:5
 msgid "Married"
 msgstr "Wedi priodi"
 
-#: grc/business_logic/constants.py:7
+#: grc/business_logic/constants.py:6
 msgid "Civil partnership"
 msgstr "Mewn partneriaeth sifil"
 
-#: grc/business_logic/constants.py:8
+#: grc/business_logic/constants.py:7
 msgid "Neither"
 msgstr "Ddim un ohonynt"
 
-#: grc/business_logic/constants.py:11
+#: grc/business_logic/constants.py:10
 msgid "Select if you have ever changed your name to reflect your gender"
 msgstr ""
 
-#: grc/business_logic/constants.py:12
+#: grc/business_logic/constants.py:11
 msgid "Select if you are currently married or in a civil partnership"
 msgstr ""
 
-#: grc/business_logic/constants.py:13
+#: grc/business_logic/constants.py:12
 msgid ""
 "Select if you ever been married or in a civil partnership where your "
 "spouse or partner died"
 msgstr ""
 
-#: grc/business_logic/constants.py:15
+#: grc/business_logic/constants.py:14
 msgid ""
 "Select if you have ever been married or in a civil partnership that has "
 "ended"
+msgstr ""
+
+#: grc/business_logic/constants.py:16
+msgid ""
+"Select if you have received gender recognition in one of these countries "
+"or territories"
 msgstr ""
 
 #: grc/lazy/lazy_form_custom_validators.py:39
@@ -99,6 +105,199 @@ msgid "Check documents needed to apply for a Gender Recognition Certificate"
 msgstr ""
 "Gwirio dogfennau sydd eu hangen i wneud cais am Dystysgrif Cydnabod "
 "Rhywedd"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:7
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:23
+msgid "Gender recognition outside of the UK"
+msgstr "Cydnabod rhywedd y tu allan i'r DU"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:27
+msgid ""
+"Some people may have already received gender recognition outside of the "
+"UK."
+msgstr ""
+"Efallai bod rhai pobl eisoes wedi derbyn cydnabyddiaeth rhywedd y tu "
+"allan i'r DU."
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:30
+msgid ""
+"The documents you need to provide are different if you have received "
+"gender recognition in a country or territory from this list:"
+msgstr ""
+"Mae'r dogfennau y mae angen i chi eu darparu yn wahanol os ydych wedi "
+"cael cydnabyddiaeth rhywedd mewn gwlad neu diriogaeth o'r rhestr hon:"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:33
+msgid "Australia – not including the external territories"
+msgstr "Awstralia – heb gynnwys y tiriogaethau allanol"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:34
+msgid "Austria"
+msgstr "Awstria"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:35
+msgid "Belgium"
+msgstr "Gwlad Belg"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:36
+msgid "Bulgaria"
+msgstr "Bwlgaria"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:37
+msgid "Canada – not including Northwest Territories and Nunavut"
+msgstr "Canada - heb gynnwys Tiriogaethau'r Gogledd Orllewin a Nunavut"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:38
+msgid "Croatia"
+msgstr "Croatia"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:39
+msgid "Cyprus"
+msgstr "Cyprus"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:40
+msgid "Czech Republic"
+msgstr "Gweriniaeth Tsiec"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:41
+msgid "Denmark"
+msgstr "Denmarc"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:42
+msgid "Estonia"
+msgstr "Estonia"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:43
+msgid "Finland"
+msgstr "Ffindir"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:44
+msgid "France"
+msgstr "Ffrainc"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:45
+msgid "Germany"
+msgstr "Almaen"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:46
+msgid "Greece"
+msgstr "Groeg"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:47
+msgid "Iceland"
+msgstr "Gwlad yr Iâ"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:48
+msgid "Italy"
+msgstr "Eidal"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:49
+msgid "Japan"
+msgstr "Japan"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:50
+msgid "Liechtenstein"
+msgstr "Liechtenstein"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:51
+msgid "Luxembourg"
+msgstr "Lwcsembwrg"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:52
+msgid "Malta"
+msgstr "Malta"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:53
+msgid "Federal District of Mexico"
+msgstr "Ardal Ffederal Mecsico"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:54
+msgid "Moldova"
+msgstr "Moldofa"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:55
+msgid "Netherlands"
+msgstr "Iseldiroedd"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:56
+msgid "New Zealand"
+msgstr "Seland Newydd"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:57
+msgid "Norway"
+msgstr "Norwy"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:58
+msgid "Poland"
+msgstr "Gwlad Pwyl"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:59
+msgid "Romania"
+msgstr "Rwmania"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:60
+msgid "Russian Federation"
+msgstr "Ffederasiwn Rwsia"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:61
+msgid "Serbia"
+msgstr "Serbia"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:62
+msgid "Singapore"
+msgstr "Singapôr"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:63
+msgid "Slovakia"
+msgstr "Slofacia"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:64
+msgid "Slovenia"
+msgstr "Slofenia"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:65
+msgid "South Africa"
+msgstr "De Affrica"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:66
+msgid "South Korea"
+msgstr "De Corea"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:67
+msgid "Spain"
+msgstr "Sbaen"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:68
+msgid "Sweden"
+msgstr "Sweden"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:69
+msgid "Switzerland"
+msgstr "Swistir"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:70
+msgid "Turkey"
+msgstr "Twrci"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:71
+msgid "Ukraine"
+msgstr "Wcráin"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:72
+msgid "United States of America – not including Idaho, Ohio, Tennessee and Texas"
+msgstr "Unol Daleithiau America – heb gynnwys Idaho, Ohio, Tennessee a Texas"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:73
+msgid "Uruguay"
+msgstr "Uruguay"
+
+#: grc/templates/document-checker/gender-recognition-outside-uk.html:82
+msgid ""
+"Have you received gender recognition in one of these countries or "
+"territories?"
+msgstr ""
+"Ydych chi wedi cael cydnabyddiaeth rhywedd yn un o'r gwledydd neu'r "
+"tiriogaethau hyn?"
 
 #: grc/templates/document-checker/partner-died.html:7
 #: grc/templates/document-checker/partner-died.html:25
