--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-13 09:41+0000\n"
+"POT-Creation-Date: 2024-03-13 11:20+0000\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -40,23 +40,51 @@ msgid "Neither"
 msgstr "Ddim un ohonynt"
 
 #: grc/business_logic/constants.py:10
+msgid ""
+"Do you plan to remain married after you receive your Gender Recognition "
+"Certificate?"
+msgstr ""
+"Ydych chi'n bwriadu parhau i briodi ar ôl cael eich Tystysgrif Cydnabod "
+"Rhywedd?"
+
+#: grc/business_logic/constants.py:11
+msgid ""
+"Do you plan to remain in your civil partnership after you receive your "
+"Gender Recognition Certificate?"
+msgstr ""
+"Ydych chi'n bwriadu aros yn eich partneriaeth sifil ar ôl i chi gael eich"
+" Tystysgrif Cydnabod Rhywedd?"
+
+#: grc/business_logic/constants.py:15
 msgid "Select if you have ever changed your name to reflect your gender"
 msgstr ""
 
-#: grc/business_logic/constants.py:11
+#: grc/business_logic/constants.py:16
 msgid "Select if you are currently married or in a civil partnership"
 msgstr ""
 
-#: grc/business_logic/constants.py:12
+#: grc/business_logic/constants.py:17
 msgid ""
 "Select if you ever been married or in a civil partnership where your "
 "spouse or partner died"
 msgstr ""
 
-#: grc/business_logic/constants.py:14
+#: grc/business_logic/constants.py:19
 msgid ""
 "Select if you have ever been married or in a civil partnership that has "
 "ended"
+msgstr ""
+
+#: grc/business_logic/constants.py:21
+msgid ""
+"Select if you have received gender recognition in one of these countries "
+"or territories"
+msgstr ""
+
+#: grc/business_logic/constants.py:23
+msgid ""
+"Select if you plan to remain married after receiving your Gender "
+"Recognition Certificate"
 msgstr ""
 
 #: grc/business_logic/constants.py:16
