--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-10 14:31+0100\n"
+"POT-Creation-Date: 2024-04-10 15:29+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -65,35 +65,43 @@ msgstr "Dewiswch os ydych chi'n briod neu mewn partneriaeth sifil ar hyn o bryd"
 
 #: grc/business_logic/constants.py:17
 msgid ""
-"Select if you ever been married or in a civil partnership where your "
-"spouse or partner died"
+"Select if you have ever been married or in a civil partnership where your"
+" spouse or partner died"
 msgstr ""
+"Dewiswch os ydych chi erioed wedi bod yn briod neu mewn partneriaeth "
+"sifil pan fu farw eich priod neu'ch partner"
 
 #: grc/business_logic/constants.py:19
 msgid ""
 "Select if you have ever been married or in a civil partnership that has "
 "ended"
 msgstr ""
+"Dewiswch os ydych chi erioed wedi bod yn briod neu mewn partneriaeth "
+"sifil sydd wedi dod i ben"
 
 #: grc/business_logic/constants.py:21
 msgid ""
 "Select if you have received gender recognition in one of these countries "
 "or territories"
 msgstr ""
+"Dewiswch os ydych chi wedi cael cydnabyddiaeth rhywedd yn un o'r gwledydd"
+" neu'r tiriogaethau hyn"
 
 #: grc/business_logic/constants.py:23
 msgid ""
 "Select if you plan to remain married after receiving your Gender "
 "Recognition Certificate"
 msgstr ""
+"Dewiswch os ydych chi’n bwriadu aros yn briod ar ôl cael eich Tystysgrif "
+"Cydnabod Rhywedd"
 
 #: grc/business_logic/constants.py:25
 msgid "Enter your email address"
-msgstr ""
+msgstr "Nodwch eich cyfeiriad e-bost"
 
 #: grc/business_logic/constants.py:26
 msgid "Enter a valid email address"
-msgstr ""
+msgstr "Nodwch gyfeiriad e-bost dilys"
 
 #: grc/lazy/lazy_form_custom_validators.py:39
 msgid "This field is required."
@@ -465,7 +473,7 @@ msgstr "gallwch ddechrau gwneud eich cais"
 
 #: grc/templates/govuk-design-system-templates/back_link.html:2
 msgid "Back"
-msgstr ""
+msgstr "Yn ôl"
 
 #: grc/templates/govuk-design-system-templates/error-summary.html:6
 msgid "There is a problem"
