--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-10 14:31+0100\n"
+"POT-Creation-Date: 2024-04-10 15:29+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,8 +59,8 @@ msgstr ""
 
 #: grc/business_logic/constants.py:17
 msgid ""
-"Select if you ever been married or in a civil partnership where your "
-"spouse or partner died"
+"Select if you have ever been married or in a civil partnership where your"
+" spouse or partner died"
 msgstr ""
 
 #: grc/business_logic/constants.py:19
